scrolling on mobile and under fixed divs fixed

--- a/source/assets/stylesheets/site.css.scss
+++ b/source/assets/stylesheets/site.css.scss
@@ -1,14 +1,14 @@
 // SITE-WIDE STYLES
 .container-fluid {
   height: 100%;
-  overflow-y: auto;
-  padding-top: 2em;
-  padding-bottom: 2em;
   margin: 0;
 }
 
 .content-row {
   min-height: 100%;
+  overflow-y: auto;
+  padding: 2em 0;
+  margin: 0;
 }
 
 .table-margin {
@@ -310,31 +310,31 @@ figure {
 // mobile
 @media (max-width: 765px) {
   .container-fluid {
-    padding-top: 5em;
-    padding-bottom: 2em;
-  }
-
-  .table-margin {
-    margin-bottom: 3em;
-  }
-
-  .navigation {
-    font-size: 18px;
-  }
-
-  .nav-content {
-    padding: 0 1em;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
   
+  .content-row {
+    min-height: 100%;
+    overflow-y: scroll;
+    padding: 3.5em 0 2em 0;
+    margin: 0;
+  }
+
+  .navigation, .footer {
+    font-size: 16px;
+  }
   body {
-    font-size: 18px;
+    height: 100%;
+    font-size: 16px;
   }
 
   h1 {
     font-size: 42px;
     line-height: 1em;
     letter-spacing: -1px;
-    margin: .2em 0;
+    margin: 0;
   }
 
   h2 {
@@ -358,6 +358,8 @@ figure {
     font-size: 90px;
     line-height: .9em;
     letter-spacing: -3px;
+    margin: 0;
+    padding: 0;
   }
 
   .page-title {
